bison-parser/examples/ill_typed/bad9.sa
module X
       x : [0 .. true] init 4;
       c : clock;
       [a!] true @ c -> (x' = x);
endmodule